[gd_scene load_steps=9 format=3 uid="uid://bn2jmim16rs3g"]

[ext_resource type="Script" path="res://scripts/building.gd" id="1_tj74q"]
[ext_resource type="Script" path="res://scripts/buildings/generic_tower.gd" id="2_67285"]
[ext_resource type="Script" path="res://scripts/buildings/towers/autoshooter.gd" id="3_05lwv"]
[ext_resource type="Texture2D" uid="uid://byh88tbkxf02v" path="res://sprites/buildings/aztec_autoshooter.png" id="4_32kj8"]
[ext_resource type="Texture2D" uid="uid://b2pp0j8j5k4nj" path="res://sprites/buildings/tower_base_3x3.png" id="4_eitwd"]
[ext_resource type="Script" path="res://scripts/buildings/resource_container.gd" id="5_81f0q"]
[ext_resource type="Script" path="res://prefabs/buildings/path_trigger.gd" id="6_6tly1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_60yd6"]
radius = 225.009

[node name="autoshooter" type="Node2D"]
script = ExtResource("1_tj74q")

[node name="generic_building" type="Node2D" parent="."]
script = ExtResource("2_67285")

[node name="specific_tower" type="Node2D" parent="generic_building"]
script = ExtResource("3_05lwv")
shots_per_second = 4.0
targeting_range = 10.0
bullet_path = "res://prefabs/basic_bullet.tscn"
kinetic_power_mult = 2.0
bullet_split = 1
accuracy = 5.0

[node name="bullet_emitter" type="Node2D" parent="."]
position = Vector2(48, 48)

[node name="autoshooter_tower" type="Sprite2D" parent="bullet_emitter"]
z_index = 1
position = Vector2(-15, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_32kj8")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(48, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_eitwd")

[node name="range" type="Area2D" parent="."]
position = Vector2(48, 48)

[node name="collision" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_60yd6")

[node name="bullet_container" type="Node2D" parent="."]

[node name="resource_container" type="Node2D" parent="."]
script = ExtResource("5_81f0q")

[node name="path_trigger" type="Node2D" parent="resource_container"]
script = ExtResource("6_6tly1")
